# DatabaseApp

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc
srcback/: models.h  testfiles.qrc
srcback/controller/: basiccontroller.cpp  basiccontroller.h
srcback/databaseclient/: databaseclient.h  mockdatabaseclient.cpp  mockdatabaseclient.h  sqldatabaseclient.cpp  sqldatabaseclient.h
srcback/testfiles/: clients.json  orders.json
srcgui/applicationauthorsview/: ApplicationAuthorsView.qml
srcgui/clientmanagementview/: Client.qml  ClientManagementView.qml  clientmanagementviewcontroller.cpp  clientmanagementviewcontroller.h  clientmodel.h
srcgui/clientserviceview/: ClientIdentities.qml  ClientServiceView.qml  OrderDataset.qml  clientserviceviewcontroller.cpp  clientserviceviewcontroller.h
srcgui/configuration/: ApplicationWindowConstants.qml  ClientIdentitiesWindowConstants.qml  ClientManagementViewConstants.qml  ClientServiceViewConstants.qml  ColorConstants.qml  CustomButtonConstants.qml  InputComponentConstants.qml  SharedConstants.qml  qmldir
srcgui/custombutton/: CustomButton.qml
srcgui/custommessagedialog/: CustomMessageDialog.qml  custommessagedialogcontroller.cpp  custommessagedialogcontroller.h
srcgui/inputcomponent/: InputComponent.qml
srcgui/mainpage/: MainPage.qml
srcgui/ordermanagementview/: Order.qml  OrderManagementView.qml  ordermanagementviewcontroller.cpp  ordermanagementviewcontroller.h  ordermodel.h
srcgui/windowmanager/: ClientIdentitiesWindow.qml  LoginWindow.qml  windowmanager.cpp  windowmanager.h
